--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 
 *{
-    cursor: url(/img/yeidam/nn.png) 2 2, auto !important;
+    cursor: url(/img/yeidam/hi.png) 2 2, auto !important;
 }
 
 body{
