--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Oswald:400|Open+Sans:700);
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap');
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
 @font-face {
     font-family: 'MonoplexKRWideNerd-Bold';
@@ -18,7 +19,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
 *{
     cursor: url(/img/yeidam/hi.png) 2 2, auto !important;
 }
@@ -27,9 +27,9 @@ body{
     background: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.25' numOctaves='2' stitchTiles='stitch'/%3E%3CfeColorMatrix type='saturate' values='0' /%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E") center center / 512px repeat, #c7b1b1;
 }
 
+
 header {
     background-blend-mode: overlay;
-    min-height: 100vh;
     display: grid;
     grid: 100vh / 1fr;
     place-items: center;
@@ -42,6 +42,16 @@ svg {
     width: 100%;
     height: 100vh;
     z-index: 1;  
+}
+#page-top{
+    position: relative;
+}
+.ylogo{
+
+    position: absolute;
+    top: 20px;
+    right: 10%;
+    z-index: 999;
 }
 #header svg{
     letter-spacing: 5px;
@@ -58,9 +68,8 @@ svg {
 .ytitle{
     position: relative;
     top: 40%;
-    left: 20px;
+    left: 60px;
     z-index: 99;
-    
 }
 .animated-text span.letter{
     letter-spacing: 1px;
@@ -183,8 +192,8 @@ section{
     border-radius: 50%;
     margin: 0 auto;
     position: relative;
-    left: -300px;
-    top: 20px;
+    left: -150px;
+    top: 0px;
     z-index: 10;
 }
 
@@ -268,101 +277,83 @@ section{
         transform: rotate(360deg);
     }
 }
-
 /* 네브 */
-.ycontainer {
-    width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-    overflow: hidden;
-}
 
-.ymenu-container {
-    background-color: #ffc901;
-    border-radius: 100%;
-    color: white;
-    cursor: pointer;
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    right: -120px;
-    top: -120px;
-    transition: all 0.3s;
+.youter nav {
+	padding-top: 30px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: #333;
+	text-align: center;
+	transform: translateX(-100%);
 }
-.yfull-menu {
-    border-radius: 0;
-    padding: 0 !important;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    transition: all 0.3s;
-}
-
-.yfull-menu .ymenu {
-    top: 40px;
-    right: 40px;
-}
-
-.ymenu {
-    color: white;
-    font-size: 3.5em;
-    position: absolute;
-    top: 160px;
-    right: 160px;
-    z-index: 100;
-    transition: all 0.3s;
-}
-.ymenu i {
-    opacity: 0.7; 
-    transform: scale(1);
-    transition: all 0.3s;
-}
-.ymenu i:hover {
-    opacity: 1;
-    transform: scale(1.2);
-    transition: all 0.3s;
-}
-
-.yoverlay {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 0%;
-    opacity: 0;
-    visibility: hidden;
-    overflow: hidden;
+.yinner {
+	transform: translateX(0);
+	transition: transform .5s cubic-bezier(.55,.07,1,.02);
 }
 .yopen {
-    opacity: .9;
-    visibility: visible;
-    height: 100%;
-}
-/* .yopen li {
-    animation: fadeInRight .5s ease alternate;
-    animation-delay: .35s;
-}
-.yopen li:nth-of-type(2) {
-    animation-delay: .4s;
+    transform: translateX(100%);
 }
 
-.yopen li:nth-of-type(3) {
-    animation-delay: .45s;
+.fa-times {
+	position: absolute;
+	top: 35px;
+	left: 5%;
+	font-size: 36px;
+	color: #F06060;
+	cursor: pointer;
+	z-index: 9999;
 }
-
-.yopen li:nth-of-type(4) {
-    animation-delay: .50s;
+.fa-bars {
+	font-size: 36px;
+	position: absolute;
+	top: 30px;
+	left: 5%;
+	cursor: pointer;
 }
-@keyframes fadeInRight {
-    0% {
-        opacity: 0;
-        right: 20%;
-    }
-
-    100% {
-        opacity: 1;
-        right: 0;
-    }
-} */
+.outer {
+	overflow: hidden;
+	position: relative;
+}
+#nav{
+    gap: 30px;
+    position: relative;
+    display: flex;
+	flex-direction: column;
+    text-align: start;
+    width: 300px;
+    margin: 0 auto;
+}
+#nav li{
+    position: relative;
+}
+.nav-link {
+	font-size: 46px;
+	letter-spacing: 4px;
+	display: block;
+	font-family: 'Mochiy Pop One', sans-serif;
+	padding: 5px 0;
+	margin: 25px 0;
+	text-transform: uppercase;
+	color: transparent;
+	-webkit-text-stroke: 1px rgba(255, 255, 255, 0.5);
+}
+.nav-link::before{
+    content: attr(data-text);
+	position: absolute;
+	color: var(--clr);
+	width: 0;
+	overflow: hidden;
+	transition: 1s;
+	border-right: 8px solid var(--clr);
+	-webkit-text-stroke: 1px var(--clr);
+}
+.nav-link:hover::before {
+	width: 140%;
+	filter: drop-shadow(0 0 50px var(--clr))
+}
